--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -60,6 +61,7 @@
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
