Conformité pages accueil, revenus, dépenses, SV

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint:mpr": "node scripts/check-mpr-forms.mjs",
     "deps:check": "node scripts/check-dependencies.mjs",
     "deps:graph": "node scripts/deps-graph.mjs",
+    "audit:nav": "node scripts/audit-nav-runner.cjs",
+    "audit:tools": "node scripts/audit-tools-runner.cjs",
+    "fix:tools": "node scripts/generate-missing-tool-routes-runner.cjs",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:emergency": "jest src/lib/fileCrypto.test.ts src/utils/redaction.test.ts",
